# pueue_webui

./: .gitmodules  README.md
static/: package-lock.json
v2/: .gitignore  README.md  ROADMAP.md  package-lock.json  package.json
v2/app/: globals.css  layout.tsx  page.tsx
v2/app/api/config/callback/: route.ts
v2/app/api/groups/: route.ts
v2/app/api/logs/[id]/: route.ts
v2/app/api/status/: route.ts
v2/app/api/task/: route.ts
v2/app/api/task/[id]/: route.ts
v2/app/logs/: page.tsx
v2/app/task/[id]/: page.tsx
v2/lib/: pueue.ts
v2/pueue-lib/: .gitignore  Cargo.toml  README.md
v2/pueue-lib/src/network/: mod.rs
v2/pueue-lib/src/network/socket/: windows.rs
v2/server/: Cargo.toml
v2/server/src/: lib.rs  main.rs  pueue_backend.rs
v2/server/tests/: handlers.rs
