[package]
name = "pueue-lib"
version = "0.30.1"
description = "The shared library to work with the Pueue client and daemon."
readme = "README.md"
keywords = ["pueue"]
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2024"
homepage = "https://github.com/nukesor/pueue"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nukesor/pueue"
rust-version = "1.85"

[badges]
maintenance = { status = "actively-developed" }

[features]
# Client needs the `network` or `network_blocking` feature to do anything.
client = ["dep:color-eyre"]
default = ["client", "log", "network", "network_blocking", "settings"]
log = ["dep:rev_buf_reader", "dep:snap"]
network = [
    "dep:async-trait",
    "dep:byteorder",
    "dep:ciborium",
    "dep:rustls",
    "dep:tokio",
    "dep:tokio-rustls",
    "secret",
    "tls",
]
network_blocking = [
    "dep:byteorder",
    "dep:ciborium",
    "dep:rustls",
    "dep:rustls-connector",
    "secret",
    "tls",
]
secret = ["dep:rand"]
settings = ["dep:dirs", "dep:serde_yaml", "dep:shellexpand"]
tls = ["dep:rustls"]

[dependencies]
async-trait = { version = "0.1", optional = true }
byteorder = { version = "1.5", optional = true }
chrono = { version = "0.4", features = ["serde"] }
ciborium = { version = "0.2", features = ["std"], optional = true }
color-eyre = { version = "0.6.5", optional = true }
dirs = { version = "6.0", optional = true }
rand = { version = "0.9", optional = true }
rev_buf_reader = { version = "0.3", optional = true }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
    "tls12",
], optional = true }
rustls-connector = { version = "0.22", default-features = false, optional = true, features = [
    "rustls--ring",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
shellexpand = { version = "3.1", optional = true }
snap = { version = "1.1", optional = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.48", features = [
    "io-util",
    "macros",
    "net",
], optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tracing = "0.1"

[dev-dependencies]
better-panic = "0.3"
color-eyre = "0.6.5"
portpicker = "0.1"
pretty_assertions = "1"
tempfile = "3"
tokio = { version = "1.48", features = ["io-std", "rt-multi-thread", "time"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "fmt",
    "local-time",
] }

# --- Platform specific dependencies ---
# Unix
[target.'cfg(unix)'.dependencies]
whoami = "1"
