[package]
name = "pueue-webui-v2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.16"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
daemonize = "0.5"
ctrlc = "3.4"
snap = "1.1"

pueue-lib = { path = "../pueue-lib" }

[dev-dependencies]
serde_json = "1"
